--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "index.js",
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
@@ -7,6 +8,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.7.1"
+    "mongodb": "^4.11.0",
+    "mongoose": "^6.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
